Se corrigieron el tamaño máximo de los formularios.

--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="col-md-5 mb-4 w-50">
                         <div class="form-floating">
-                            <input class="form-control" id="inputNewPassword" name="newPassword" type="password"
+                            <input class="form-control" id="inputNewPassword" name="newPassword" type="password" maxlength="24"
                             placeholder="Ingrese su nueva contraseña" formControlName='password'>
                             <label for="inputNewPassword">Nueva Contraseña</label>
                             <span class="lead error" *ngIf="(formRef.submitted  && changePassword.get('password')?.hasError('required')) || changePassword.get('password')?.hasError('pattern')">
@@ -32,7 +32,7 @@
                     </div>
                     <div class="col-md-5 mb-4 w-50">
                         <div class="form-floating">
-                            <input class="form-control" id="inputConfPassword" name="confPassword" type="password"
+                            <input class="form-control" id="inputConfPassword" name="confPassword" type="password" maxlength="24"
                             placeholder="Ingresa nuevamente su nueva contraseña" formControlName='confpassword'>
                             <label for="inputEmail">Confirmar Contraseña</label>
                             <!-- <span class="lead error"*ngIf="validacionPassword()">La contraseñas no coinciden</span> -->
