--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/olvido-password/olvido-password.component.html
@@ -14,7 +14,7 @@
                                     </div>
                                     <form>
                                         <div class="form-floating mb-3">
-                                            <input #email class="form-control" id="inputEmail" type="email" placeholder="name@example.com">
+                                            <input #email class="form-control" id="inputEmail" type="email" placeholder="name@example.com" maxlength="150">
                                             <label for="inputEmail">Correo electrónico</label>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
