--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/restablecer-password/restablecer-password.component.html
@@ -41,10 +41,10 @@
                                             <div class="form-floating">
                                                 <input #password class="form-control" id="inputPassword" name="password"
                                                     type="password" placeholder="Ingrese su contraseña"
-                                                    formControlName="password">
+                                                    formControlName="password" maxlength="24">
                                                 <label for="inputPassword">Contraseña</label>
                                                 <span class="lead error"
-                                                    *ngIf="(formRef.submitted && restablecerPassword.get('password')?.hasError('required')) || restablecerPassword.get('password')?.hasError('pattern') || restablecerPassword.get('password')?.hasError('minlength')">contraseñas
+                                                    *ngIf="(formRef.submitted && restablecerPassword.get('password')?.hasError('required')) || restablecerPassword.get('password')?.hasError('pattern') ">contraseñas
                                                     no válida</span>
                                             </div>
                                         </div>
@@ -54,9 +54,9 @@
                                                 <input class="form-control" id="validatePassword"
                                                     name="passwordvalidate" type="password"
                                                     placeholder="Ingrese su contraseña nuevamente"
-                                                    formControlName="confpassword">
+                                                    formControlName="confpassword" maxlength="24">
                                                 <label for="inputvalidatePassword">Valide su contraseña</label>
-                                                <span class="lead error" *ngIf="validacionPassword()">La contraseñas
+                                                <span class="lead error" *ngIf="(formRef.submitted && restablecerPassword.get('password')?.hasError('required')) || restablecerPassword.get('password')?.hasError('pattern') || validacionPassword()">La contraseñas
                                                     no coinciden</span>
                                             </div>
                                         </div>
