--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/login/login.component.html
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/login/login.component.html
@@ -17,13 +17,13 @@
                                     <div class="form-floating mt-5 mb-3">
                                         <input formControlName="email" (input)="validacion('email')"
                                             class="form-control" id="inputUser" type="text" placeholder="email"
-                                            name="username" minlength='4'>
+                                            name="username" minlength='4' maxlength="150">
                                         <label for="inputEmail">Email</label>
                                     </div>
                                     <div class="form-floating mt-5 mb-3">
                                         <input formControlName="password" (input)="validacion('password')"
                                             class="form-control" id="inputPassword" type="password"
-                                            placeholder="password" name="password" minlength='8'>
+                                            placeholder="password" name="password" minlength='8' maxlength="24">
                                         <label for="inputPassword">Password</label>
                                     </div>
                                     <div class="form-check mt-5 mb-3">
